-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u202, jfx11, jfx12
-
Component/s: javafx
-
Environment:
Ubuntu 18.04
GTK 3 toolkit
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8232819 | jfx11.0.5 | Pankaj Bansal | P3 | Closed | Fixed | |
| JDK-8223745 | 8u231 | Kevin Rushforth | P3 | Resolved | Fixed | b01 |
On some Linux distros, a Stage is briefly shown at top-left before moving to correct position when using the (now default) GTK3 toolkit.
This bug has been reported on Ubuntu 18.04 and Manjaro 17.1.12.
This bug has been reported on Ubuntu 18.04 and Manjaro 17.1.12.
- backported by
-
JDK-8223745 [GTK3] Stage sometimes shown at top-left before moving to correct position
-
- Resolved
-
-
JDK-8232819 [GTK3] Stage sometimes shown at top-left before moving to correct position
-
- Closed
-
- relates to
-
JDK-8232811 Dialog's preferred size no longer accommodates multi-line strings
-
- Resolved
-
- links to
(1 links to)