8212060: [GTK3] Stage sometimes shown at top-left before moving to correct position

Reviewed-by: kcr, pbansal